Changes in version 1.0-20:

* Added sampleVars= to function yai so that X-, Y- or both kinds of variables
can be sampled.
* Added method="msnPP" to function yai to enable using canonical correlation via 
projection pursuit from package ccaPP
* Added function ensembleImpute to get an mean or median imputation for several
separate imputations. Computes the mode for factors.
* Added John Coulston as an author on some of the new functions.
* Added bootstrap= option to yai() so that reference observations can 
be sampled with replacement forming a bootstrap rep.
* Added function buildConsensus() to find a consensus imputation over several 
reps and forming one yai object. 
* Modified some help files to improve acknowledgements and cross references.
* Fixed a small typographical error in the help for correctBias, accomplished 
minor edits to other help files. 
* Added the ability to specify k in function newtargets (how did I miss that?).
* Changed the variable importance score calculation for function yaiVarImp
from "MeanDecreaseGini" to "MeanDecreaseAccuracy" and made it clear in the help file.
* Added function applyMask that removes (or keeps) reference neighbors that share 
group membership with a target. Thanks to Clara Antón Fernández for suggestions that
lead to this function being added.

Changes in version 1.0-19:

* Moved COPYRIGHTS to inst/COPYRIGHTS and greatly added detailed information 
to the file.
* Modified DESCRIPTION to note contribution of the authors of ANN (as per 
CRAN policy).
* Added a Copyright statement to DESCRIPTION.  
* Added detail to the Description statement in file DESCRIPTION.
* Fixed print.yai.R error when there is only one target and K>1.
* Modified the file handling in AsciiGridPredict (and AsciiGridImpute).
* Fixed a case where a reference picks itself as the second most similar neighbor. This only
happens when there are two or more identical reference observations (thanks to Petteri Packalen).