@@ -33,19 +33,24 @@ rmsd.yai = function (object,vars=NULL,scale=FALSE,...)
    if (length(both) == 0) stop("nothing to compute")
    vo=paste(both,"o",sep=".")
    rmsd=data.frame(rep(NA,length(vo)),row.names=both)
-   if (scale) names(rmsd)="rmsdS"
-   else       names(rmsd)="rmsd"
+   names(rmsd)=if (scale || length(scale)>1) "rmsdS" else "rmsd"
+   usedScale = list()
    for (i in 1:length(both))
    {
       if (!is.factor(object[,both[i]]))
       {
          rmsd[i,1]=sqrt(mean(((object[,both[i]]-object[,vo[i]])^2)))
-         if (scale)
+         if (scale || length(scale)>1) 
          {
-            div=attr(object,"scale")[both[i],"scale"]
-            if (!is.na(div) & div > 0.01) rmsd[i,1]=rmsd[i,1]/div
+            div = NULL
+            if (length(scale) > 1) div = scale[[both[i]]]
+            if (is.null(div) || is.na(div)) div=attr(object,"scale")[both[i],"scale"] # in data
+            if (is.null(div) || is.na(div)) div = sd(object[,vo[i]]) #use observed when needed.
+            usedScale[[both[i]]] = div
+            rmsd[i,1] = if (!is.na(div) && div > 0.01) rmsd[i,1]/div else NA
          }
       }
    }
+   if (length(usedScale) > 0) attr(rmsd,"scale") = unlist(usedScale)
    rmsd
 }
